--- a/client/src/components/Thumbnail/style.css
+++ b/client/src/components/Thumbnail/style.css
@@ -1,7 +1,7 @@
 div.thumbnail {
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
   width: 100%;
-  padding-top: 100%;
+  padding-top: 150%;
 }
